--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         </div> <!-- hero section end -->
 
         <!-- about section sec2 -->
-        <div class="container-sm" id="about-section" style="width: 100%;height: 400px; border: 2px solid red; ">
-
+        <div class="container-sm" id="about-section" style="height: 400px; border: 2px solid red; ">
+            <h4 id="about-section-heading">Who we are</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatem ratione minima, corrupti inventore fuga exercitationem optio eligendi! Voluptas, dolor? Vitae quidem id nesciunt beatae ea voluptates aliquid consectetur architecto eveniet eos?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eum provident iusto fuga, quas labore. Lorem ipsum dolor sit amet.</p>
+            
         </div><!-- about section end -->
 
         <!-- memorial section sec3 -->
