Change Display text and minor appearance

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Elysian Field 🌍</title>
 
         <link href="css/styles.css" rel="stylesheet">
 
@@ -54,8 +54,8 @@
 
             <div class="hero-header">
             <img src="images/elysianfield_logo_hero.png" data-aos="fade-up" data-aos-duration="2000" class="hero-img" alt="elysian-field-logo">
-            <h6 data-aos="fade-up" data-aos-duration="2000">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</h6>
+            <h6 data-aos="fade-up" data-aos-duration="2000">Welcome to our Digital Elysium, a final resting place for the souls of the Digital Age</h6>
+                <!-- <br> -->
                 <button class="greenButton">
                     Sign up with Email
                 </button>
@@ -70,8 +70,12 @@
         <div class="container-sm" id="about-section">
             <h2 id="about-section-heading" data-aos="fade-up" data-aos-duration="2000">Who we are</h2>
             <div class="about-section-para">
-                <p class="about_para" data-aos="fade-up" data-aos-duration="2000">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatem ratione minima, corrupti inventore fuga exercitationem optio eligendi! Voluptas, dolor? Vitae quidem id nesciunt beatae ea voluptates aliquid consectetur architecto eveniet eos?</p>
-                <p class="about_para" data-aos="fade-up" data-aos-duration="2000">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eum provident iusto fuga, quas labore. Lorem ipsum dolor sit amet.</p>
+                <p class="about_para" data-aos="fade-up" data-aos-duration="2000">
+                    Elysian Field is a platform engineered to support digital immortality that is heavily inspired and influenced by Greek mythology. Elysian Fields is a conception of the afterlife paradise in Greek mythology.                </p>
+                <p class="about_para" data-aos="fade-up" data-aos-duration="2000">
+                    Our platform will help you treasure those memories exactly the way you remember them.
+                    Our vision is to preserve the thoughts, stories, and memories of all our loved ones and create a pathway so that we can communicate with them like we always did. And to provide a platform so that the "legacy" of every individual will live on forever.
+                                </p>
             </div>
             <img  src="images/down_arrows.png"  alt="inner_shape" class="about-section-arrows" >
         </div><!-- about section end -->
@@ -80,7 +84,18 @@
         <div class="container-fluid" id="tombstone-section" >
             <div class="tomb_div_left" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
                 <h2 id="about-section-heading" >Tombstone</h2>
-                <p class="about_para" style="text-align:left;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="about_para" style="text-align:left;" >
+                    We believe in the near future having a virtual tombstone will be a common thing for anyone using the internet.
+                </p>
+
+                <p class="about_para" style="text-align:left;" >
+                    Since the dawn of Mankind, there have been different rituals to honor our deceased loved ones. We are trying to reincarnate this thousand-year-old tradition for the 21 century.
+                </p>
+
+                <p class="about_para" style="text-align:left;" >
+                    Create your virtual tombstone today and customize it to anyway that you like.
+                </p>
+
                 <button class="greenButton">
                     Buy a Tombstone
                 </button>
@@ -94,7 +109,10 @@
         <div class="container-fluid memorial-section" id="memorial-section" style="width: 100%;height: 730px; ">
             <div class="gbox">
                 <h1 id="headertext">Memorial</h1>
-                <p id="memoParaText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p id="memoParaText">
+                    We do not simply make a memorial but help recreate and preserve the cherished memories for your loved ones.
+                    <br> Memorials help to honor the people and tell their stories to the world.
+                </p>
                 <button class="whiteButton memoBtn">
                     Go to memorial
                 </button>
@@ -116,21 +134,21 @@
             <div class="row footer_row" style=" height: 100vh;">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6" id="footerRight"> 
                     <div class="container contact_box" data-aos="fade-up" data-aos-duration="2000">
-                        <h1 id="footerTxtHeader">Say hi!</h1>
+                        <h1 id="footerTxtHeader">Join Now!</h1>
                         <form id="myForm" class="contact_form">
                         <label data-aos="fade-down" data-aos-duration="1000">Full Name</label>
                         <br/>
-                        <input class="contact_input" name="full_name" />
+                        <input class="contact_input" name="full_name" style="color: white;"/>
                         <br/><br/>
                         <label data-aos="fade-down" data-aos-duration="1000">Email</label>
                         <br/>
-                        <input class="contact_input" name="email" />
+                        <input class="contact_input" name="email" style="color: white;"/>
                         <br/><br/>
-                        <label data-aos="fade-down" data-aos-duration="1000">Message</label>
+                        <!-- <label data-aos="fade-down" data-aos-duration="1000">Message</label>
                         <br/>
                         <input class="contact_input_msg" name="message" />         
                         <br/>
-                        <br/>
+                        <br/> -->
                         </form>
                         
                         <button onclick="SubForm()" class="cta"  data-aos-duration="1500">
@@ -143,17 +161,18 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-                    <h1 data-aos="fade-up" data-aos-duration="1500">Project <span style="color: #23C283;">Categories</span></h1>
-                    <p data-aos="fade-up" data-aos-duration="2000" style="color: #23C283;" >"Lorem ipsum dolor sit amet, consectetur adipisci ng elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim  "Lorem ipsum dolor sit amet,
-                    consectetur adipisci ng elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim </p>
+                    <h1 data-aos="fade-up" data-aos-duration="1500">Join Our Exclusive <span style="color: #23C283;">WaitingList</span></h1>
+                    <p data-aos="fade-up" data-aos-duration="2000" style="color: #23C283;" >
+                        Join our waiting list to be first ones to experience the Digital Elysium.<br>
+                        First 500 members will get access to premium features at the start.
+                    </p>
                     <br>
                     <div data-aos="fade-up" data-aos-duration="2000">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#23C283" class="bi bi-envelope" viewBox="0 0 16 16">
                             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                             </svg>
-                            Companyname@gmail.com 
+                            elysianfield@gmail.com 
                         </span>
                         <br><br>
                         <span>
@@ -175,7 +194,7 @@
 
                 <div class="row">
                     <!-- <p  style="margin-left: 20px;font-weight: lighter; font-size: 10px;" class="inate">Craftmanship <a href="https://www.instagram.com/inate.creative.labs/" style="font-weight: bold;"> @INATE </a> Creative Labs 2022</p>     -->
-                    <h3 style="text-align: center;font-size: 100%;">All rights reserved Elysianfield 2022</h3>
+                    <h3 style="text-align: center;font-size: 100%;">All Rights Reserved ElysianField &copy; 2022</h3>
                 </div>
             </div>
 
