Addes nav forwaiting list

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             <img src="images/elysianfield_logo_hero.png" data-aos="fade-up" data-aos-duration="2000" class="hero-img" alt="elysian-field-logo">
             <h6 data-aos="fade-up" data-aos-duration="2000">Welcome to our Digital Elysium, a final resting place for the souls of the Digital Age</h6>
                 <!-- <br> -->
+                <a href="#WaitingList">
                 <button class="greenButton">
                     Sign up with Email
                 </button>
+                </a>
             </div>
 
             <img  src="images/inner_shape.png" alt="inner_shape" class="inner_page_shape" style="z-index: 6; top: 540px; width: 100vw;">
@@ -161,7 +163,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
-                    <h1 data-aos="fade-up" data-aos-duration="1500">Join Our Exclusive <span style="color: #23C283;">WaitingList</span></h1>
+                    <h1 id="WaitingList" data-aos="fade-up" data-aos-duration="1500">Join Our Exclusive <span style="color: #23C283;">WaitingList</span></h1>
                     <p data-aos="fade-up" data-aos-duration="2000" style="color: #23C283;" >
                         Join our waiting list to be first ones to experience the Digital Elysium.<br>
                         First 500 members will get access to premium features at the start.
